<resources>
    <string name="app_name">FindMyPhone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_permission_description">Чтобы начать работу приложения, выдайте разрешение на местоположение вашего устройства. Нажмите на кнопку ниже либо включите данное разрешение в настройках.</string>
    <string name="get_permission_button_text">Выдать разрешение на геолокацию</string>
    <string name="main_fragment_text">Приложение работает.</string>
    <string name="main_fragment_text_stop">Приложение остановлено.</string>
    <string name="button_go_to_settings_text">Перейти в настройки</string>
    <string name="toast_off_gps">Приложение FindMyPhone не может работать с выключенным GPS :(</string>
    <string name="text_button_stop">Остановить</string>
    <string name="button_continue_text">Продолжить работу</string>
    <string name="try_again">Повторить попытку</string>
    <string name="description_network">Для инициализации в приложении необходимо подключение к интернету</string>
    <string name="choose_account_text">Выберите тип вашего аккаунта</string>
    <string name="button_child">Ребенок</string>
    <string name="button_parent">Родитель</string>
    <string name="parent_edit_text">Введите токен</string>
    <string name="open_map">Открыть карту</string>
    <string name="menu_day">за сутки</string>
    <string name="menu_week">за неделю</string>
    <string name="menu_month">за месяц</string>
    <string name="menu_custom">выбрать даты</string>
    <string name="network_dialog_title">Возникла ошибка</string>
    <string name="network_dialog_description">Для инициализации необходимо получить токен с сервера. Проверьте доступ к интернету и повторите попытку.</string>
    <string name="wrong_token_title">Неверный токен</string>
</resources>