<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.childPart.GetPermissionsFragment">

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_permission_description"
        android:gravity="center"
        android:textSize="@dimen/get_permission_text_size"
        android:textColor="@color/black"
        android:background="@drawable/beauty_shape"
        android:padding="@dimen/normal_padding"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/big_margin_top"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:elevation="10dp"/>

    <Button
        android:id="@+id/button_give_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_description"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/get_permission_button_text"
        android:padding="@dimen/normal_padding"/>

    <Button
        android:id="@+id/button_go_to_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_give_permission"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/button_go_to_settings_text"
        android:padding="@dimen/normal_padding"/>

</androidx.constraintlayout.widget.ConstraintLayout>