<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.childPart.MainFragment">

    <TextView
        android:id="@+id/text_label"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/main_fragment_text"
        android:textSize="@dimen/main_fragment_text_size"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/beauty_shape"
        android:padding="@dimen/normal_padding"
        android:elevation="10dp"/>

    <Button
        android:id="@+id/button_stop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/text_label"
        app:layout_constraintEnd_toEndOf="@+id/text_label"
        app:layout_constraintTop_toBottomOf="@+id/text_label"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/text_button_stop"
        android:padding="@dimen/normal_padding"/>

    <Button
        android:id="@+id/button_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/text_label"
        app:layout_constraintEnd_toEndOf="@+id/text_label"
        app:layout_constraintTop_toBottomOf="@+id/text_label"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/button_continue_text"
        android:padding="@dimen/normal_padding"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>